--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -237,7 +237,7 @@
     </select>
 
     <!-- 打ち出しゲーム数 -->
-    <label for="game">打ち出しゲーム数</label>
+    <label for="game">打ち出しG数</label>
     <input
       type="number"
       id="game"
