計測コード追加

--- a/templates/index_free.html
+++ b/templates/index_free.html
@@ -204,6 +204,14 @@
   </style>
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-HXM85ZV043');
+</script>
+
 <body>
   <!-- タイトル -->
   <h1 style="display:flex; align-items:center; justify-content:center; gap:10px;">
