カード対応4

--- a/templates/index_free.html
+++ b/templates/index_free.html
@@ -12,14 +12,14 @@
   <meta property="og:title" content="けんけんスロット分析ツール">
   <meta property="og:description" content="">
   <meta property="og:url" content="{{ og_url }}">
-  <meta property="og:image" content="{{ url_for('static', filename='icon.jpg', _external=True) }}">
+  <meta property="og:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
   <meta property="og:site_name" content="">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="けんけんスロット分析ツール">
   <meta name="twitter:description" content="けんけんスロット分析ツール">
-  <meta name="twitter:image" content="{{ url_for('static', filename='icon.jpg', _external=True) }}">
+  <meta name="twitter:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
 
   <title>けんけんスロット分析ツール</title>
 
