--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,11 @@
   <meta property="og:description" content="">
   <meta property="og:url" content="{{ og_url }}">
   <meta property="og:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
+
+  <!-- paidが出ないため -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
   <meta property="og:site_name" content="">
 
   <!-- Twitter Card -->
