--- a/templates/login.html
+++ b/templates/login.html
@@ -6,21 +6,21 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="けんけんスロット分析ツール">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="実践データから機械割や期待値を自動計算できる分析ツールです。">
   <meta property="og:url" content="{{ og_url }}">
-  <meta property="og:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
+  <meta property="og:image" content="{{ og_image }}">
 
   <!-- paidが出ないため -->
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="けんけんスロット分析ツール">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="けんけんスロット分析ツール">
   <meta name="twitter:description" content="けんけんスロット分析ツール">
-  <meta name="twitter:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
+  <meta name="twitter:image" content="{{ og_image }}">
 
   <!-- スマホの安全領域対応（user-scalable削除で拡大制御の問題回避） -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
