--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -10,16 +10,16 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="けんけんスロット分析ツール">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="実践データから機械割や期待値を自動計算できる分析ツールです。">
   <meta property="og:url" content="{{ og_url }}">
-  <meta property="og:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
-  <meta property="og:site_name" content="">
+  <meta property="og:image" content="{{ og_image }}">
+  <meta property="og:site_name" content="けんけんスロット分析ツール">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="けんけんスロット分析ツール">
   <meta name="twitter:description" content="けんけんスロット分析ツール">
-  <meta name="twitter:image" content="{{ url_for('static', filename='ogp.jpg', _external=True) }}">
+  <meta name="twitter:image" content="{{ og_image }}">
 
   <title>けんけんスロット分析ツール</title>
 
